--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -89,6 +89,7 @@ a:focus,
 
 .App .logo {
 		max-width: 300px;
+		margin-bottom: 20px;
 	}
 
 .App .post-list {
@@ -98,45 +99,105 @@ a:focus,
 	}
 
 .App .post {
-		width: 600px;
+		width: 640px;
+		position: relative;
+		z-index: 2;
 	}
 
+.App .post.more {
+			cursor: pointer;
+		}
+
+.App .post.more.expand {
+				cursor: auto;
+			}
+
 .App .post__content {
+			background: #fff;
 			border: 1px solid #333;
 			padding: 24px;
 			width: 100%;
+			position: relative;
 		}
 
-button:disabled {
-	pointer-events: none;
+.App .post__date {
+			font-size: 0.85em;
+			margin-bottom: 12px;
+		}
+
+.App .post__title {
+			margin-bottom: 12px;
+		}
+
+.App .post__more {
+			margin-top: 12px;
+			padding-top: 12px;
+			border-top: 1px solid #ccc;
+		}
+
+.App .post__close {
+			pointer-events: none;
+			z-index: -1;
+			opacity: 1;
+			top: 0;
+			right: 0;
+			position: absolute;
+			transform: translateX(0);
+			transition: all 0.3s ease-in;
+		}
+
+.App .post.expand .post__close {
+				pointer-events: all;
+				right: -4px;
+				opacity: 1;
+				transform: translateX(100%);
+				transition: all 0.2s ease-in;
+			}
+
+button {
+	padding: 6px;
 }
+
+button:disabled {
+		pointer-events: none;
+	}
+
+input.line {
+	padding: 6px;
+}
+
+textarea {
+	padding: 6px;
+}
+
+.checkbox input {
+		margin-right: 8px;
+	}
+
+.checkbox label {
+		font-size: 0.85em;
+	}
 
 .manipulate-content {
 	font-size: 16px;
 	display: flex;
-    margin: 20px 0;
-    width: 100%;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
+	margin: 20px 0;
+	width: 100%;
+	gap: 20px;
+	justify-content: space-between;
+	align-items: center;
+	align-items: stretch;
+	width: 640px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
-.manipulate-content .search {
+.manipulate-content > * {
 		display: flex;
+		align-items: center;
 		width: 300px;
 		border: 1px solid #ccc;
 		padding: 12px;
-	}
-
-.manipulate-content .sort {
-		display: flex;
-		width: 300px;
-		border: 1px solid #ccc;
-		padding: 12px;
-	}
-
-.manipulate-content input[type="checkbox"] {
-		margin-right: 8px;
 	}
 
 .modal {
@@ -151,7 +212,8 @@ button:disabled {
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	background: #0000005e;
+	background: #0000008f;
+	z-index: 10;
 }
 
 .modal.active {
@@ -162,3 +224,55 @@ button:disabled {
 		background: #ccc;
 		padding: 32px;
 	}
+
+form {
+	display: flex;
+	gap: 6px;
+}
+
+form.add-post {
+		flex-direction: column;
+		width: 600px;
+	}
+
+form.add-post textarea {
+			height: 200px;
+		}
+
+code {
+	white-space: break-spaces;
+}
+
+.animate-default-enter {
+		opacity: 0;
+	}
+
+.animate-default-enter-active {
+		opacity: 1;
+		transition: opacity 1s ease-in;
+	}
+
+.animate-default-exit {
+		opacity: 1;
+	}
+
+.animate-default-exit-active {
+		opacity: 0;
+		transition: opacity 0.35s ease-out;
+	}
+
+.post-info {
+	display: flex;
+	justify-content: space-between;
+	font-size: 1.4em;
+	margin-bottom: 0.5em;
+}
+
+.scroll-observer {
+	-webkit-user-select: none;
+	user-select: none;
+	opacity: 0;
+	height: 1px;
+	width: 1px;
+	pointer-events: none;
+}
