--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -1,75 +1,179 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 @import 'nullstyle';
+@import 'vars';
 
 #root {
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 .App {
+	flex: 1;
+	size: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin: 30px;
+	justify-content: space-between;
+	padding: * var(--content-sides);
 	font-family: sans-serif;
-	.logo {
-		max-width: 300px;
-		margin-bottom: 20px;
+	gap: 24px;
+	color: var(--c-text-primary) var(--c-bg-primary);
+}
+.main-header {
+	width: calc(100% + var(--content-sides) * 2);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 56px;
+	background: var(--c-bg-secondary);
+	margin: * calc(var(--content-sides) * -1);
+	padding: * var(--content-sides);
+	border-bottom: 1px solid var(--c-text-secondary);
+
+	position: fixed;
+	width: 100%;
+	z-index: 3;
+
+	&__logo {
+		svg {
+			display: block;
+			height: 32px;
+			path {
+				fill: var(--c-text-primary);
+			}
+		}
 	}
-	.post-list {
+	&__filters {
+		display: flex;
+		gap: 20px;
+		justify-content: space-between;
+		align-items: center;
+		align-items: stretch;
+	}
+	&__add-post {
+	}
+}
+.main-footer {
+	width: calc(100% + var(--content-sides) * 2);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 56px;
+	background: var(--c-bg-secondary);
+	margin: * calc(var(--content-sides) * -1);
+	padding: * var(--content-sides);
+	border-top: 1px solid var(--c-text-secondary);
+}
+.posts {
+	width: var(--post-feed-width);
+	flex: 1;
+
+	margin-top: 80px;
+	.posts-state-msg {
+		text-align: center;
+	}
+	&__list {
 		display: flex;
 		flex-direction: column;
 		gap: 12px;
 	}
-	.post {
-		width: 640px;
-		position: relative;
-		z-index: 2;
-		&.more {
-			cursor: pointer;
-			&.expand {
-				cursor: auto;
-			}
-		}
-		&__content {
-			background: #fff;
-			border: 1px solid #333;
-			padding: 24px;
-			width: 100%;
-			position: relative;
-		}
-		&__date {
-			font-size: 0.85em;
-			margin-bottom: 12px;
-		}
-		&__title {
-			margin-bottom: 12px;
-		}
-		&__more {
-			margin-top: 12px;
-			padding-top: 12px;
-			border-top: 1px solid #ccc;
-		}
-		&__close {
-			pointer-events: none;
-			z-index: -1;
-			opacity: 1;
-			position: absolute 0 0 * *;
-			transform: translateX(0);
-			transition: all 0.3s ease-in;
-		}
+	&__info {
+		display: flex;
+		justify-content: space-between;
+		font-size: 1.4em;
+		margin-bottom: 0.5em;
+
+		gap: 8px;
+		font-size: 0.85em;
+		position: fixed;
+		top: 80px;
+		z-index: 3;
+		right: 24px;
+		background: var(--c-text-primary);
+		color: var(--c-bg-primary);
+		padding: 8px;
+		flex-direction: column;
+		align-items: flex-end;
+	}
+}
+.post {
+	position: relative;
+	z-index: 2;
+	&.more {
+		cursor: pointer;
 		&.expand {
-			.post__close {
-				pointer-events: all;
-				right: -4px;
-				opacity: 1;
-				transform: translateX(100%);
-				transition: all 0.2s ease-in;
-			}
+			cursor: auto;
+		}
+	}
+	&__content {
+		background: var(--c-bg-secondary);
+		border: 1px solid var(--c-text-secondary);
+		padding: 24px;
+		width: 100%;
+		position: relative;
+	}
+	&__date {
+		font-size: 0.85em;
+		margin-bottom: 12px;
+		color: var(--c-text-secondary);
+	}
+	&__title {
+		margin-bottom: 12px;
+	}
+	&__more {
+		margin-top: 12px;
+		padding-top: 12px;
+		border-top: 1px solid var(--c-text-secondary);
+	}
+	&__close {
+		pointer-events: none;
+		z-index: -1;
+		opacity: 1;
+		position: absolute 0 0 * *;
+		transform: translateX(0);
+		transition: all 0.3s ease-in;
+	}
+	&.expand {
+		.post__close {
+			pointer-events: all;
+			right: -4px;
+			opacity: 1;
+			transform: translateX(100%);
+			transition: all 0.2s ease-in;
 		}
 	}
 }
+.form-group {
+	display: flex;
+	gap: 12px;
+	align-items: center;
+	padding: 12px;
+}
 button {
 	padding: 6px;
+	background: var(--c-button-primary);
+	border: 1px solid var(--c-text-secondary);
+
 	&:disabled {
 		pointer-events: none;
 	}
+	&.secondary {
+		background: none;
+		padding: 0;
+		border: none;
+	}
+}
+input {
+	color: var(--c-text-primary) var(--c-input-bg);
+	border: 1px solid var(--c-text-secondary);
+}
+select {
+	border: 1px solid var(--c-text-secondary);
+	padding: 6px;
+	color: var(--c-text-primary);
 }
 input.line {
 	padding: 6px;
@@ -78,33 +182,18 @@ textarea {
 	padding: 6px;
 }
 .checkbox {
+	display: flex;
+	align-items: center;
+	gap: 8px;
 	input {
-		margin-right: 8px;
 	}
 	label {
 		font-size: 0.85em;
+		position: relative;
+		top: 0.1em;
 	}
 }
 
-.manipulate-content {
-	font-size: 16px;
-	display: flex;
-	margin: 20px 0;
-	width: 100%;
-	gap: 20px;
-	justify-content: space-between;
-	align-items: center;
-	align-items: stretch;
-	width: 640px;
-	margin: * auto;
-	> * {
-		display: flex;
-		align-items: center;
-		width: 300px;
-		border: 1px solid #ccc;
-		padding: 12px;
-	}
-}
 .modal {
 	display: none;
 	position: fixed 0;
@@ -112,25 +201,31 @@ textarea {
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	background: #0000008f;
+	background: var(--c-modal-overlay);
 	z-index: 10;
 	&.active {
 		display: flex;
 	}
 
 	&__wrapper {
-		background: #ccc;
+		border: 1px solid var(--c-text-secondary);
+		background: var(--c-bg-secondary);
 		padding: 32px;
-	}
-}
-form {
-	display: flex;
-	gap: 6px;
-	&.add-post {
-		flex-direction: column;
-		width: 600px;
-		textarea {
-			height: 200px;
+		width: 480px;
+		> div {
+			display: flex;
+			flex-direction: column;
+			gap: 12px;
+		}
+		form {
+			display: flex;
+			flex-direction: column;
+			gap: 6px;
+			&.add-post {
+				textarea {
+					height: 200px;
+				}
+			}
 		}
 	}
 }
@@ -153,17 +248,15 @@ code {
 		transition: opacity 0.35s ease-out;
 	}
 }
-.post-info {
-	display: flex;
-	justify-content: space-between;
-	font-size: 1.4em;
-	margin-bottom: 0.5em;
-}
 .scroll-observer {
 	-webkit-user-select: none;
 	user-select: none;
-	opacity: 0;
-	height: 1px;
-	width: 1px;
+	opacity: 1;
+	background: #f00;
+	height: 5px;
+	width: 5px;
 	pointer-events: none;
+	position: relative;
+	top: 0px;
+	z-index: 5;
 }
